feat: scaffold 1st version
